# SoDaUtils

./: CMakeLists.txt  Doxyfile.in  LICENSE  README.md  SoDaPropsConfig.cmake.in  SoDaUtilsConfig.cmake  SoDaUtilsConfig.cmake.in  SoDaUtilsConfigVersion.cmake.in  version.hxx.in
apptainer/: CMakeLists.txt  DistCheck.sh  Fedora37-rpm-test.def  Fedora37.def  Fedora37_NoYaml.def  Fedora37_rpm_test.def  Fedora_CommonTools.def  Fedora_generic.def  Fedora_noyaml.def  Fedora_rpm_test.def  Fedora_with_yaml.def  Ubuntu20r04.def  Ubuntu20r04_debtest.def  Ubuntu_CommonTools.def  Ubuntu_generic.def  build_deb_kit.sh  build_examples_installed.sh  build_examples_local.sh  build_rpm.sh  build_rpm_kit.sh  build_test_install.sh  build_test_local.sh  dist_check.sh.in  makeDEB.sh  makeRPM.sh  test_deb_kit.sh  test_rpm_kit.sh
cmake/: BuildPackage.cmake  BuildYamlCpp.cmake  CMakeLists.txt  FindSoDaUtils.cmake  SoDaUtilsConfig.cmake  SoDaUtilsConfigVersion.cmake.in
example/: CMakeLists.txt  CMakeLists.txt~  FormatExample.cxx  Format_Test.cxx  OptionsExample.cxx  UtilsExample.cxx  UtilsExample.cxx~
examples/: BarrierExample.cxx  CMakeLists.txt  FormatExample.cxx  Format_Test.cxx  OptionsExample.cxx  PropertyTreeYAML_Test.cxx  PropertyTreeYamlExample.cxx  test1.yaml
include/: Barrier.hxx  Exception.hxx  Format.hxx  MailBox.hxx  NoCopy.hxx  Options.hxx  Property.hxx  PropertyIO.hxx  PropertyIO_JSON.hxx  PropertyTree.hxx  PropertyTreeYAML.hxx  Utils.hxx  Utils.hxx~  UtilsBase.hxx
src/: ArchiveMerge.cmake  Barrier.cxx  CMakeLists.txt  CMakeLists.txt~  Format.cxx  Options.cxx  Property.cxx  PropertyIO_JSON.cxx  PropertyTree.cxx  PropertyTreeYAML.cxx  Split.cxx  Split.cxx~  UtilsBase.cxx
test/: BarrierTest.cxx  CMakeLists.txt  FormatHexTest.cxx  FormatNaN.cxx  FormatTest.cxx  MailBoxTest.cxx  OptionsTest.cxx  PropertyTest.cxx  PropertyTreeYAML_Test.cxx  SplitTest.cxx  test.json  test1.yaml
